--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Introduction"
 description: "Welcome to the new home for your documentation"
+# openapi: "GET /endpoint"
 ---
 
 ## Setting up
@@ -15,6 +16,21 @@ Get your documentation site up and running in minutes.
 >
   Follow our three step quickstart guide.
 </Card>
+
+To denote a `word` or `phrase` as code, enclose it in backticks (`).
+
+```java Syntax highlighting example
+class HelloWorld {
+    public static void main(String[] args) {
+        System.out.println("Hello, World!");
+    }
+}
+```
+
+```javascript Title example
+const hello = "world";
+```
+
 
 ## Make it yours
 
