--- a/docs/settings/default-settings.mdx
+++ b/docs/settings/default-settings.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Screenshot'
+title: 'Default Settings'
 description: 'Display inline code and code blocks'
-icon: 'code'
+icon: 'sliders'
 ---
