--- a/docs/settings/expected-work-hours.mdx
+++ b/docs/settings/expected-work-hours.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Manage Team'
+title: 'Expected Work Hours'
 description: 'Display inline code and code blocks'
-icon: 'code'
+icon: 'check'
 ---
