--- a/docs/settings/idle-alert.mdx
+++ b/docs/settings/idle-alert.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Work Days'
+title: 'Idle Alert'
 description: 'Display inline code and code blocks'
-icon: 'code'
+icon: 'comments'
 ---
