--- a/docs/settings/manage-employee.mdx
+++ b/docs/settings/manage-employee.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Idle Alert'
+title: 'Manage Employee'
 description: 'Display inline code and code blocks'
-icon: 'code'
+icon: 'users'
 ---
