--- a/docs/settings/manage-team.mdx
+++ b/docs/settings/manage-team.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Review Apps & Sites'
+title: 'Manage Team'
 description: 'Display inline code and code blocks'
-icon: 'code'
+icon: 'paw'
 ---
