--- a/docs/settings/review-apps-and-sites.mdx
+++ b/docs/settings/review-apps-and-sites.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Brand Rewamp'
+title: 'Review Apps & Sites'
 description: 'Display inline code and code blocks'
-icon: 'code'
+icon: 'magnifying-glass'
 ---
