--- a/docs/settings/work-days.mdx
+++ b/docs/settings/work-days.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Manage Employee'
+title: 'Work Days'
 description: 'Display inline code and code blocks'
-icon: 'code'
+icon: 'check'
 ---
