--- a/changelog/updates/overview.mdx
+++ b/changelog/updates/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Default Settings'
+title: 'Overview'
 description: 'Display inline code and code blocks'
-icon: 'code'
+icon: 'wrench'
 ---
