--- a/docs/access-control/access-control.mdx
+++ b/docs/access-control/access-control.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Stealth Monitoring'
+title: 'Access Control'
 description: 'Display inline code and code blocks'
-icon: 'code'
+icon: 'universal-access'
 ---
