--- a/docs/settings/brand-revamp.mdx
+++ b/docs/settings/brand-revamp.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Expected Work Hours'
+title: 'Brand Rewamp'
 description: 'Display inline code and code blocks'
-icon: 'code'
+icon: 'sliders'
 ---
