Comming soon page activated

--- a/api-reference/dashboard/weekly-summary.mdx
+++ b/api-reference/dashboard/weekly-summary.mdx
@@ -2,3 +2,13 @@
 title: 'Weekly Summary'
 openapi: 'GET /weekly-summary'
 ---
+
+import { Callout } from "mintlify";
+
+
+<Callout type="info">
+🔐 **API Access – Coming Soon**
+
+API documentation and access will be enabled shortly.  
+For early or customized API access, contact **team@trackpilots.com**.
+</Callout>
