--- a/api-reference/settings/expected-work-hours/update-expected-work-hours.mdx
+++ b/api-reference/settings/expected-work-hours/update-expected-work-hours.mdx
@@ -2,3 +2,12 @@
 title: 'Update Expected Work Hours'
 openapi: 'PATCH /expected-work-hours'
 ---
+
+import { Callout } from "mintlify";
+
+<Callout type="info">
+🔐 **API Access – Coming Soon**
+
+API documentation and access will be enabled shortly.  
+For early or customized API access, contact **team@trackpilots.com**.
+</Callout>
