--- a/api-reference/settings/work-day/get-work-day.mdx
+++ b/api-reference/settings/work-day/get-work-day.mdx
@@ -2,3 +2,12 @@
 title: 'get Work Day'
 openapi: 'GET /work-day'
 ---
+
+import { Callout } from "mintlify";
+
+<Callout type="info">
+🔐 **API Access – Coming Soon**
+
+API documentation and access will be enabled shortly.  
+For early or customized API access, contact **team@trackpilots.com**.
+</Callout>
