--- a/changelog/2025/july-2025.mdx
+++ b/changelog/2025/july-2025.mdx
@@ -3,3 +3,13 @@ title: 'July 2025'
 description: 'Updates from July 2025'
 icon: 'calendar'
 ---
+
+import { Callout } from "mintlify";
+
+<Callout type="info">
+📝 **Changelog – Coming Soon**
+
+We’re preparing a detailed changelog to keep you informed about new features, improvements, and fixes.  
+
+Release notes and version history will be published here shortly.
+</Callout>
