--- a/changelog/updates/overview.mdx
+++ b/changelog/updates/overview.mdx
@@ -1,5 +1,32 @@
 ---
-title: 'Overview'
-description: 'Display inline code and code blocks'
+title: Changelog Overview
+description: Overview of Trackpilots product updates and release notes
 icon: 'wrench'
 ---
+
+import { Callout } from "mintlify";
+
+# Trackpilots Changelog
+
+The Trackpilots changelog keeps you informed about product updates, feature enhancements, performance improvements, and bug fixes across the platform.
+
+<Callout type="info">
+📝 <strong>Changelog – Coming Soon</strong>
+
+We’re currently preparing detailed release notes and version history.  
+All future updates and improvements will be documented here shortly.
+</Callout>
+
+## What you’ll find here
+Once available, this section will include:
+
+- New feature releases and enhancements  
+- Performance and stability improvements  
+- Bug fixes and resolved issues  
+- API and integration updates  
+- Security and compliance-related changes  
+
+## Why this matters
+Our changelog is designed to provide transparency and clarity, helping teams understand what’s new, what’s improved, and how updates impact their workflows.
+
+> Stay tuned — regular product updates will be published here as Trackpilots continues to evolve.
