--- a/docs/settings/manage-employee.mdx
+++ b/docs/settings/manage-employee.mdx
@@ -3,3 +3,11 @@ title: 'Manage Employee'
 description: 'Display inline code and code blocks'
 icon: 'users'
 ---
+import { Callout } from "mintlify";
+
+<Callout type="info">
+🔐 **Product Documentation – Coming Soon**
+
+API documentation and access will be enabled shortly.  
+For early or customized API access, contact **team@trackpilots.com**.
+</Callout>
