--- a/api-reference/access-control/create-access-control.mdx
+++ b/api-reference/access-control/create-access-control.mdx
@@ -2,3 +2,12 @@
 title: 'Create Access Control'
 openapi: 'POST /access-control'
 ---
+
+import { Callout } from "mintlify";
+
+<Callout type="info">
+🔐 **API Access – Coming Soon**
+
+API documentation and access will be enabled shortly.  
+For early or customized API access, contact **team@trackpilots.com**.
+</Callout>
