--- a/api-reference/announcement/holidays.mdx
+++ b/api-reference/announcement/holidays.mdx
@@ -2,3 +2,12 @@
 title: 'Holidays'
 openapi: 'GET /holidays'
 ---
+
+import { Callout } from "mintlify";
+
+<Callout type="info">
+🔐 **API Access – Coming Soon**
+
+API documentation and access will be enabled shortly.  
+For early or customized API access, contact **team@trackpilots.com**.
+</Callout>
