--- a/api-reference/dashboard/app-and-website-usage.mdx
+++ b/api-reference/dashboard/app-and-website-usage.mdx
@@ -2,3 +2,12 @@
 title: 'Apps and Website Usage'
 openapi: 'GET /apps-and-website-usage'
 ---
+
+import { Callout } from "mintlify";
+
+<Callout type="info">
+🔐 **API Access – Coming Soon**
+
+API documentation and access will be enabled shortly.  
+For early or customized API access, contact **team@trackpilots.com**.
+</Callout>
