--- a/api-reference/settings/stealth-monitoring/get-stealth-monitoring.mdx
+++ b/api-reference/settings/stealth-monitoring/get-stealth-monitoring.mdx
@@ -2,3 +2,12 @@
 title: 'Get Stealth Monitoring'
 openapi: 'GET /stealth-monitoring'
 ---
+
+import { Callout } from "mintlify";
+
+<Callout type="info">
+🔐 **API Access – Coming Soon**
+
+API documentation and access will be enabled shortly.  
+For early or customized API access, contact **team@trackpilots.com**.
+</Callout>
