--- a/changelog/2024/december-2024.mdx
+++ b/changelog/2024/december-2024.mdx
@@ -3,3 +3,13 @@ title: 'December 2024'
 description: 'Updates from December 2024'
 icon: 'calendar'
 ---
+
+import { Callout } from "mintlify";
+
+<Callout type="info">
+📝 **Changelog – Coming Soon**
+
+We’re preparing a detailed changelog to keep you informed about new features, improvements, and fixes.  
+
+Release notes and version history will be published here shortly.
+</Callout>
