--- a/changelog/2026/january-2026.mdx
+++ b/changelog/2026/january-2026.mdx
@@ -3,3 +3,13 @@ title: 'January 2026'
 description: 'Updates from January 2026'
 icon: 'calendar'
 ---
+
+import { Callout } from "mintlify";
+
+<Callout type="info">
+📝 **Changelog – Coming Soon**
+
+We’re preparing a detailed changelog to keep you informed about new features, improvements, and fixes.  
+
+Release notes and version history will be published here shortly.
+</Callout>
