--- a/docs/getting-started/live-demo.mdx
+++ b/docs/getting-started/live-demo.mdx
@@ -3,3 +3,12 @@ title: 'Live Demo'
 description: 'Display inline code and code blocks'
 icon: 'laptop-code'
 ---
+
+import { Callout } from "mintlify";
+
+<Callout type="info">
+🔐 **Product Documentation – Coming Soon**
+
+API documentation and access will be enabled shortly.  
+For early or customized API access, contact **team@trackpilots.com**.
+</Callout>
