--- a/docs/settings/brand-revamp.mdx
+++ b/docs/settings/brand-revamp.mdx
@@ -3,3 +3,12 @@ title: 'Brand Rewamp'
 description: 'Display inline code and code blocks'
 icon: 'sliders'
 ---
+
+import { Callout } from "mintlify";
+
+<Callout type="info">
+🔐 **Product Documentation – Coming Soon**
+
+API documentation and access will be enabled shortly.  
+For early or customized API access, contact **team@trackpilots.com**.
+</Callout>
