--- a/docs/settings/review-apps-and-sites.mdx
+++ b/docs/settings/review-apps-and-sites.mdx
@@ -3,3 +3,12 @@ title: 'Review Apps & Sites'
 description: 'Display inline code and code blocks'
 icon: 'magnifying-glass'
 ---
+
+import { Callout } from "mintlify";
+
+<Callout type="info">
+🔐 **Product Documentation – Coming Soon**
+
+API documentation and access will be enabled shortly.  
+For early or customized API access, contact **team@trackpilots.com**.
+</Callout>
