--- a/docs/setup-and-configutation/add-your-team-member.mdx
+++ b/docs/setup-and-configutation/add-your-team-member.mdx
@@ -3,3 +3,12 @@ title: 'Add your team member'
 description: 'Display inline code and code blocks'
 icon: 'user-plus'
 ---
+
+import { Callout } from "mintlify";
+
+<Callout type="info">
+🔐 **Product Documentation – Coming Soon**
+
+API documentation and access will be enabled shortly.  
+For early or customized API access, contact **team@trackpilots.com**.
+</Callout>
