UI Improvements added

--- a/api-reference/getting-started.mdx
+++ b/api-reference/getting-started.mdx
@@ -1,15 +1,16 @@
 ---
 title: Getting Started
 description: Get started with Trackpilots API access
+icon: rocket
 ---
 
 import { Callout } from "mintlify";
 
-# Getting Started with Trackpilots API
+{/* # Getting Started with Trackpilots API */}
 
 Trackpilots APIs are designed to help organizations integrate employee activity, productivity, and compliance data directly into their internal systems.
 
-<Callout icon="key" color="#FFC107" iconType="regular">API Access – Coming Soon 🚀</Callout>
+<Callout icon="key" color="#FFC107" iconType="rxegular">API Access – Coming Soon 🚀</Callout>
 
 <Note>
 We’re currently finalizing API access and documentation.  
