Icon issue fixed

--- a/docs/getting-started/what-is-trackpilots.mdx
+++ b/docs/getting-started/what-is-trackpilots.mdx
@@ -11,7 +11,7 @@ import { Callout } from "mintlify";
 
 We’re currently preparing detailed API documentation to help you integrate **Trackpilots** seamlessly with your internal systems and workflows.
 
-<Callout icon="key" color="#FFC107" iconType="rxegular">Product Documentation – Coming Soon 🚀</Callout>
+<Callout icon="key" color="#FFC107" iconType="regular">Product Documentation – Coming Soon 🚀</Callout>
 
 ## What’s coming
 - Secure authentication and access tokens  
