--- a/api-reference/getting-started.mdx
+++ b/api-reference/getting-started.mdx
@@ -10,7 +10,7 @@ import { Callout } from "mintlify";
 
 Trackpilots APIs are designed to help organizations integrate employee activity, productivity, and compliance data directly into their internal systems.
 
-<Callout icon="key" color="#FFC107" iconType="rxegular">API Access – Coming Soon 🚀</Callout>
+<Callout icon="key" color="#FFC107" iconType="regular">API Access – Coming Soon 🚀</Callout>
 
 <Note>
 We’re currently finalizing API access and documentation.  
