Added few UI improvements

--- a/changelog/updates/overview.mdx
+++ b/changelog/updates/overview.mdx
@@ -10,12 +10,12 @@ import { Callout } from "mintlify";
 
 The Trackpilots changelog keeps you informed about product updates, feature enhancements, performance improvements, and bug fixes across the platform.
 
-<Callout type="info">
-📝 <strong>Changelog – Coming Soon</strong>
+<Callout icon="key" color="#FFC107" iconType="regular">Changelog Documentation – Coming Soon 🚀</Callout>
 
+<Note>
 We’re currently preparing detailed release notes and version history.  
 All future updates and improvements will be documented here shortly.
-</Callout>
+</Note>
 
 ## What you’ll find here
 Once available, this section will include:
